--- a/Lecture 09/Lecture 9.ipynb
+++ b/Lecture 09/Lecture 9.ipynb
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "100\n"
      ]
     }
    ],
@@ -218,12 +218,13 @@
     "# any intermediate value inside the function\n",
     "\n",
     "def fn_square(x):\n",
+    "    \n",
     "    y = x**2\n",
     "    return(y)\n",
     "\n",
-    "x = 5\n",
-    "y = -5\n",
-    "print(fn_square(x = 1))\n"
+    "x = 0\n",
+    "y = 1\n",
+    "print(fn_square(x = 10))\n"
    ]
   },
   {
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,35 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "25\n",
-      "25\n"
+      "115\n"
      ]
     }
    ],
    "source": [
     "# Write your own code here\n",
-    "x = 1\n",
-    "modify_x()\n",
+    "\n",
     "modify_x()\n",
     "print(x)\n",
     "\n",
-    "def fn_square(x):\n",
-    "    global y\n",
-    "    y = x**2\n",
-    "    return(y)\n",
     "\n",
-    "x = 5\n",
-    "y = 10\n",
-    "print(fn_square(x = 5))\n",
-    "print(y)\n",
     "\n"
    ]
   },
@@ -375,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data  = pd.DataFrame(  [ ] )"
+    "data  = pd.DataFrame([])"
    ]
   },
   {
@@ -394,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +552,7 @@
     }
    ],
    "source": [
-    "# The fucntion \"apply\" will extract each element and return the function value\n",
+    "# The function \"apply\" will extract each element and return the function value\n",
     "# It is similar to running a \"for-loop\" over each element\n",
     "\n",
     "data[\"can_vote\"]    = data[\"age\"].apply(fn_iseligible_vote)\n",
@@ -594,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,12 +593,12 @@
     "# The first argument of map() is a function\n",
     "# The following arguments are the subarguments of the function\n",
     "\n",
-    "data[\"can_vote_map\"] = list(map(  fn_iseligible_vote  , data[\"age\"]   ))"
+    "data[\"can_vote\"] = list(map(  fn_iseligible_vote  , data[\"age\"]   ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,6 +606,11 @@
     "\n",
     "data[\"num_siblings\"] = list(map(fn_sum,data[\"num_underage_siblings\"],data[\"num_adult_siblings\"]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -633,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,14 +653,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>num_underage_siblings</th>\n",
+       "      <th>num_adult_siblings</th>\n",
+       "      <th>can_vote</th>\n",
+       "      <th>in_twenties</th>\n",
+       "      <th>age_bracket</th>\n",
+       "      <th>num_siblings</th>\n",
+       "      <th>has_siblings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Adolescent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  num_underage_siblings  num_adult_siblings  can_vote  in_twenties  \\\n",
+       "0   18                      0                   1      True        False   \n",
+       "1   29                      0                   0      True         True   \n",
+       "2   15                      1                   0     False        False   \n",
+       "3   32                      1                   1      True        False   \n",
+       "4    6                      0                   0     False        False   \n",
+       "\n",
+       "  age_bracket  num_siblings  has_siblings  \n",
+       "0       Adult             1          True  \n",
+       "1       Adult             0         False  \n",
+       "2  Adolescent             1          True  \n",
+       "3       Adult             2          True  \n",
+       "4       Child             0         False  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Write your own code\n",
-    "siblings = lambda number_of_siblings: number_of_siblings >= 1\n",
     "\n",
-    "data[\"had_siblings\"] = data[\"num_siblings\"].apply(siblings)\n"
+    "has_siblings = lambda x : (x > 0)\n",
+    "\n",
+    "data[\"has_siblings\"]= data[\"num_siblings\"].apply(has_siblings)\n",
+    "\n",
+    "display(data)\n"
    ]
   },
   {
@@ -685,15 +794,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your own code\n",
-    "dataset = pd.read_csv(\"data_raw/features.csv\")\n",
-    "big_mpg = lambda mpg: mpg >= 29\n",
-    "dataset[\"mpg_above_29\"] = dataset[\"mpg\"].apply(big_mpg)\n",
-    "dataset.to_csv(\"data_clean/features.csv\")\n"
+    "\n",
+    "raw = pd.read_csv(\"data_raw/features.csv\")\n",
+    "\n",
+    "def mpg_check(mpg):\n",
+    "    return (mpg>=29)\n",
+    "\n",
+    "mpg_above_29 = raw[\"mpg\"].apply(mpg_check)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -719,29 +835,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A banana is yellow', 'A strawberry is red', 'A kiwi is green']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write your own code\n",
     "\n",
-    "fn_message = lambda fruit,color: \"A \" + fruit + \" is \" + color\n",
     "\n",
-    "list_fruits = [\"banana\",\"strawberry\",\"kiwi\"]\n",
-    "list_colors = [\"yellow\",\"red\",\"green\"]\n",
     "\n",
-    "list(map( fn_message, list_fruits, list_colors ))\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -793,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -803,16 +906,6 @@
       "1\n",
       "25\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'hi Alejandro'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -831,9 +924,7 @@
     "\n",
     "x = 1\n",
     "print(fn_quadratic(1))\n",
-    "print(fn_quadratic(5))\n",
-    "\n",
-    "message_hello(\"Alejandro\")\n"
+    "print(fn_quadratic(5))\n"
    ]
   },
   {
@@ -860,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +977,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -900,12 +991,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
