--- a/Assignment 7/Assignment 7.ipynb
+++ b/Assignment 7/Assignment 7.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -261,7 +261,7 @@
       "text/plain": [
        "    studentid numericgrade\n",
        "0           1           C-\n",
-       "1           2          NaN\n",
+       "1           2            F\n",
        "2           3            F\n",
        "3           4            D\n",
        "4           5           C+\n",
@@ -295,7 +295,7 @@
     "# Write your own code\n",
     "\n",
     "students = pd.read_csv(\"data_raw/students.csv\")\n",
-    "bins_x = [0,54,59,64,69,74,79,82,86,92,100]\n",
+    "bins_x = [-1,54,59,64,69,74,79,82,86,92,100]\n",
     "labels_xx= [\"F\", \"D\", \"C-\", \"C\", \"C+\", \"B-\", \"B\", \"B+\", \"A-\", \"A\"]\n",
     "students[\"numericgrade\"] = pd.cut( students[\"numericgrade\"],\n",
     "                                  bins= bins_x,\n",
@@ -330,17 +330,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "resultId             int64\n",
+       "raceId               int64\n",
+       "driverId             int64\n",
+       "constructorId        int64\n",
+       "number              object\n",
+       "grid                 int64\n",
+       "position            object\n",
+       "positionText        object\n",
+       "positionOrder        int64\n",
+       "points             float64\n",
+       "laps                 int64\n",
+       "time                object\n",
+       "milliseconds        object\n",
+       "fastestLap          object\n",
+       "rank                object\n",
+       "fastestLapTime      object\n",
+       "fastestLapSpeed     object\n",
+       "statusId             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code here\n",
     "# Note: When you run \"results.dtypes\" you will get the type (int, float, object)\n",
     "# Object represents columns coded as strings.\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "results = pd.read_csv(\"data_raw/results.csv\")\n",
+    "results.dtypes\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ANSWER: ***  Here, the milliseconds column is of type object, whereas the codebook indicates it is of type integer. ***"
    ]
   },
   {
@@ -368,14 +404,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\\\\N']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code here\n",
     "\n",
+    "results = pd.read_csv(\"data_raw/results.csv\")\n",
     "\n",
-    "\n"
+    "subset      = results.query(\"milliseconds.str.isnumeric() == False\")\n",
+    "list_unique = pd.unique(subset[\"milliseconds\"])\n",
+    "print(list_unique)\n",
+    "\n",
+    "list_old=['\\\\N']\n",
+    "list_new=[np.NaN]\n",
+    "results[\"milliseconds\"]=results[\"milliseconds\"].replace(list_old,list_new)\n",
+    "\n",
+    "results[\"milliseconds\"] = pd.to_numeric(results[\"milliseconds\"])\n",
+    "\n",
+    "results[\"milliseconds\"].dtype\n"
    ]
   },
   {
@@ -400,14 +465,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_laps</th>\n",
+       "      <th>std_laps</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>constructorId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>198.500000</td>\n",
+       "      <td>2.121320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>4.242641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>184.285714</td>\n",
+       "      <td>32.912583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>178.666667</td>\n",
+       "      <td>36.950417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>163.764706</td>\n",
+       "      <td>63.148168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>210 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                mean_laps   std_laps\n",
+       "constructorId                       \n",
+       "149            198.500000   2.121320\n",
+       "112            197.000000   4.242641\n",
+       "109            184.285714  32.912583\n",
+       "119            178.666667  36.950417\n",
+       "108            163.764706  63.148168\n",
+       "...                   ...        ...\n",
+       "93               0.000000        NaN\n",
+       "61               0.000000   0.000000\n",
+       "137              0.000000        NaN\n",
+       "91               0.000000        NaN\n",
+       "74               0.000000   0.000000\n",
+       "\n",
+       "[210 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "results_agg = results.groupby(\"constructorId\").agg(mean_laps= (\"laps\" , \"mean\"),\n",
+    "                                                    std_laps= (\"laps\", \"std\"))\n",
+    "                              \n",
     "\n",
-    "\n"
+    "results_agg.sort_values(by='mean_laps' , ascending= False)\n"
    ]
   },
   {
@@ -433,14 +615,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_laps</th>\n",
+       "      <th>sd_laps</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>constructorId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50.093510</td>\n",
+       "      <td>23.147774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>51.349621</td>\n",
+       "      <td>21.064902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>46.396450</td>\n",
+       "      <td>22.565290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>51.787879</td>\n",
+       "      <td>18.281774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>50.305798</td>\n",
+       "      <td>25.953854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>52.282051</td>\n",
+       "      <td>19.522147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>51.434028</td>\n",
+       "      <td>19.915741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>54.684211</td>\n",
+       "      <td>17.680279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>52.393443</td>\n",
+       "      <td>19.883361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>54.204545</td>\n",
+       "      <td>17.951505</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               mean_laps    sd_laps\n",
+       "constructorId                      \n",
+       "1              50.093510  23.147774\n",
+       "3              51.349621  21.064902\n",
+       "4              46.396450  22.565290\n",
+       "5              51.787879  18.281774\n",
+       "6              50.305798  25.953854\n",
+       "...                  ...        ...\n",
+       "209            52.282051  19.522147\n",
+       "210            51.434028  19.915741\n",
+       "211            54.684211  17.680279\n",
+       "213            52.393443  19.883361\n",
+       "214            54.204545  17.951505\n",
+       "\n",
+       "[201 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "results_agg = (results.query(\"raceId >= 200\")).groupby(\"constructorId\").agg(mean_laps = ('laps','mean'),\n",
+    "                             sd_laps =  ('laps','std'))\n",
     "\n",
-    "\n"
+    "display(results_agg)"
    ]
   }
  ],
