--- a/Lecture 14/Lecture 14.ipynb
+++ b/Lecture 14/Lecture 14.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -408,12 +408,11 @@
     "# In this case \"constructor\" in this case denotes the team \n",
     "# The following computes aggregate point stats for each (team, race) combination\n",
     "\n",
-    "teamrace_agg = (results.groupby([\"raceId\",\"constructorId\"])\n",
-    "                       .agg(mean_points = ('points','mean'),\n",
+    "teamrace_agg = results.groupby([\"raceId\",\"constructorId\"]).agg(mean_points = ('points','mean'),\n",
     "                            sd_points =   ('points','std'),\n",
     "                            min_points =  ('points','min'),\n",
     "                            max_points =  ('points','max'),\n",
-    "                            count_obs   = ('points',len)))\n",
+    "                            count_obs   = ('points',len))\n",
     "\n",
     "len(teamrace_agg)"
    ]
