--- a/Lecture 16/Lecture 16 (Examples).ipynb
+++ b/Lecture 16/Lecture 16 (Examples).ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,21 +65,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25840\n",
+      "25840\n",
+      "Index(['resultId', 'raceId', 'driverId', 'constructorId', 'number', 'grid',\n",
+      "       'position', 'positionText', 'positionOrder', 'points', 'laps', 'time',\n",
+      "       'milliseconds', 'fastestLap', 'rank', 'fastestLapTime',\n",
+      "       'fastestLapSpeed', 'statusId', 'points col'],\n",
+      "      dtype='object')\n",
+      "[  1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17  18\n",
+      "  19  21  20  22  24  25  26  27  29  28  30  31  32  33  34  35  36  37\n",
+      "  38  40  39  41  42  44  45  46  47  23  48  49  50  51  52  53  54  55\n",
+      "  56  57  58  59 204  60  61  62 182  63  64  65  66  67  68  69  70  71\n",
+      "  72  73  74 202  75  76 203  80  77  78  79  81  82  83  84 180 200 199\n",
+      " 201  85 187  86 198 196 191 167 197 189 183 194 190  89 170 195 184 176\n",
+      " 172 193  90 181 188 192  91 185 186  93  94  92  95  96  97 177 179 173\n",
+      "  98  99 175  87 100 174 178 101 102 103 104 105 106 171 107 108 109 110\n",
+      " 111 112 113 114 115 116 117 118 119 120 121 122 169 123 168 124 125 127\n",
+      " 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145\n",
+      " 146 147 148 149 150 152 151 126 153 154 155 156 157 158 159 160 162 161\n",
+      " 163 205 164 166 208 206 207 209 210 211 213 214]\n"
+     ]
+    }
+   ],
    "source": [
     "# (a) Count number of observations\n",
     "n_total   = len(results)\n",
-    "\n",
+    "print(n_total)\n",
     "# (b) Count non-missing observations\n",
     "n_nonmiss = results[\"points\"].count()\n",
+    "print(n_nonmiss)\n",
     "\n",
     "# (b) Get column names\n",
-    "list_names = results.columns.names\n",
+    "list_names = results.columns\n",
+    "print(list_names)\n",
     "\n",
     "# (c) Unique values\n",
-    "list_ids   = pd.unique(results[\"constructorId\"])\n"
+    "list_ids   = pd.unique(results[\"constructorId\"])\n",
+    "print(list_ids)\n",
+    "\n"
    ]
   },
   {
